Footer image alignment. Table margin fix.

--- a/src/main/client/src/app/browse/pages/term/term.component.css
+++ b/src/main/client/src/app/browse/pages/term/term.component.css
@@ -1,8 +1,3 @@
-/*.mat-form-field {*/
-    /*font-size: 14px;*/
-    /*flex-grow: 1;*/
-    /*margin-left: 32px;*/
-  /*}*/
  .gene-association .mat-column-entrezGeneId{
      max-width: 250px;
  }
@@ -12,6 +7,14 @@
  .disease-association .mat-column-diseaseName {
     margin-right: 100px;
  }
+
+@media (max-width:767px) {
+  .disease-association .mat-column-diseaseName {
+    margin-right: 10px;
+  }
+
+ }
+
  .mat-column-dbDiseases{
     white-space: nowrap;
     text-overflow: ellipsis;
