--- a/src/main/client/src/app/shared/footer/footer.component.css
+++ b/src/main/client/src/app/shared/footer/footer.component.css
@@ -16,12 +16,6 @@
   margin: 0 25px 0 0;
 }
 
-@media (max-width:769px){
-  .footer .group{
-    margin:25px 0 25px 50px;
-  }
-}
-
 .footer .footer-brand{
     height: 75px;
     width: 175px;
@@ -35,4 +29,27 @@
 
 .footer .footer-brand:hover, .footer .footer-brand-larger:hover{
   opacity:.6;
+}
+
+
+@media (max-width:767px){
+  .footer .group{
+    margin:25px 0 25px 50px;
+  }
+
+  .footer .footer-brand{
+    height: 50px;
+    width: 125px;
+  }
+
+  .footer .footer-brand-larger{
+    height: 30px;
+    width: 100px;
+    margin: 0 0 0 5px;
+  }
+  .footer .logo-group{
+    float:left;
+    margin: 0 5px 0 5px;
+  }
+
 }
